2006-11-15  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc_room.erl: API improvement: It is now easier to
	extract data from the MUC room process.

2006-11-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_node_groups.erl: Support for node tagging
	* src/ejabberd_sup.erl: Likewise
	* src/ejabberd_frontend_socket.erl: Use node tags to determine
	backend nodes
	* src/ejabberd_config.erl: Added node_type and cluster_nodes
	options
	* src/ejabberd_app.erl: Establish connections to the nodes from
	the cluster_nodes option

	* src/ejabberd_router.erl: Added balancing method option
	* src/ejabberd_config.erl: Likewise

2006-11-05  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_private_odbc.erl: Support for MySQL and MSSQL.
	* src/odbc/odbc_queries.erl: Likewise.
	* src/odbc/mysql.sql: Likewise.
	* src/odbc/mssql.sql: Likewise.

2006-11-04  Mickael Remond  <mickael.remond@process-one.net>

	* src/eldap_utils.erl: Fixed missing export.

	* src/odbc/pg.sql: Database scripts consistency.
	* src/odbc/mysql.sql: Likewise.
	* src/odbc/mssql.sql: Likewise.

	* src/odbc/mysql: Database creation script should now be compliant
	with MySQL 4.0.x.

2006-10-29  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: XEP-0065 proxy documentation (thanks to Evgeniy
	Khramtsov).

2006-10-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.cfg.example: Changed the anonymous example a bit to
	work in most cases.
	* doc/guide.tex: Likewise.

2006-10-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_proxy65/: XEP-0065 proxy (thanks to Evgeniy Khramtsov)
	* src/Makefile.win32: Likewise
	* src/Makefile.in: Likewise
	* src/configure.ac: Likewise
	* src/jlib.hrl: Likewise
	* src/ejabberd.hrl: Added the ejabberd URL

2006-10-27  Mickael Remond  <mickael.remond@process-one.net>
	
	* src/guide.tex: Fixed typos.

2006-10-25  Mickael Remond  <mickael.remond@process-one.net>
