@@ -58,6 +58,7 @@
 \newcommand{\modofflineodbc}{\module{mod\_offline\_odbc}}
 \newcommand{\modprivacy}{\module{mod\_privacy}}
 \newcommand{\modprivate}{\module{mod\_private}}
+\newcommand{\modprivateodbc}{\module{mod\_private\_odbc}}
 \newcommand{\modproxy}{\module{mod\_proxy65}}
 \newcommand{\modpubsub}{\module{mod\_pubsub}}
 \newcommand{\modregister}{\module{mod\_register}}
@@ -1477,6 +1478,7 @@ database for the following data:
     \hline \modofflineodbc{} & Offline message storage & supported database (*) & No \\ 
     \hline \modprivacy{} & Blocking Communication &  & Yes \\ 
     \hline \modprivate{} & Private XML Storage (\jepref{0049}) &  & No \\ 
+    \hline \modprivateodbc{} & Private XML Storage (\jepref{0049}) & supported database (*) & No \\ 
     \hline \modproxy{} & SOCKS5 Bytestreams (\jepref{0065}) &  & No\\
     \hline \modpubsub{} & Publish-Subscribe (\jepref{0060}) &  & No \\ 
     \hline \modregister{} & In-Band Registration (\jepref{0077}) &  & No \\ 
